# VulkanGameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/demo-game/: CMakeLists.txt  main.cpp
apps/demo-game/include/: game_config.hpp
apps/editor/: CMakeLists.txt  editor_ui.cpp  main.cpp
apps/editor/include/: editor_config.hpp  editor_ui.hpp
assets/shaders/: deferred_lighting.frag  deferred_lighting.vert  depth_prepass.frag  depth_prepass.vert  fullscreen_blit.frag  fullscreen_blit.vert  gbuffer_generation.frag  gbuffer_generation.vert  light_culling.comp  pointlight.frag  pointlight.vert  simple_shader.frag  simple_shader.vert  simple_shader_forward_plus.frag
cmake/: dependencies.cmake
engine/klingon/: CMakeLists.txt
engine/klingon/include/klingon/: camera.hpp  config.hpp  engine.hpp  forward_plus.hpp  frame_info.hpp  game_object.hpp  glm_cereal.hpp  imgui_context.hpp  material.hpp  model_data.hpp  movement_controller.hpp  render_graph.hpp  render_system_interface.hpp  renderer.hpp  scene.hpp  texture_manager.hpp  transform.hpp
engine/klingon/include/klingon/model/: asset_loader.hpp  mesh.h
engine/klingon/include/klingon/picking/: ray_picker.hpp
engine/klingon/include/klingon/render_systems/: blit_render_system.hpp  deferred_lighting_system.hpp  depth_prepass_system.hpp  point_light_system.hpp  simple_render_system.hpp
engine/klingon/include/klingon/renderer/: descriptor_manager.hpp  frame_context.hpp
engine/klingon/src/: camera.cpp  engine.cpp  game_object.cpp  imgui_context.cpp  model_data.cpp  movement_controller.cpp  render_graph.cpp  renderer.cpp  scene.cpp  texture_manager.cpp  transform.cpp
engine/klingon/src/model/: asset_loader.cpp  mesh.cpp
engine/klingon/src/picking/: ray_picker.cpp
engine/klingon/src/render_systems/: blit_render_system.cpp  deferred_lighting_system.cpp  depth_prepass_system.cpp  point_light_system.cpp  simple_render_system.cpp
engine/klingon/src/renderer/: descriptor_manager.cpp
libs/batleth/: CMakeLists.txt
libs/batleth/include/batleth/: barrier_batcher.hpp  buffer.hpp  command_buffer.hpp  descriptors.hpp  device.hpp  framebuffer.hpp  image.hpp  image_utils.hpp  instance.hpp  pipeline.hpp  render_graph_pass.hpp  render_graph_pass_impl.hpp  render_graph_resource.hpp  render_pass.hpp  sampler.hpp  shader.hpp  shader_cache.hpp  shader_compiler.hpp  surface.hpp  swapchain.hpp  sync.hpp  texture.hpp  transient_allocator.hpp
libs/batleth/src/: barrier_batcher.cpp  buffer.cpp  command_buffer.cpp  descriptors.cpp  device.cpp  framebuffer.cpp  image.cpp  image_utils.cpp  instance.cpp  pipeline.cpp  render_graph_pass.cpp  render_graph_resource.cpp  render_pass.cpp  sampler.cpp  shader.cpp  shader_cache.cpp  shader_compiler.cpp  surface.cpp  swapchain.cpp  sync.cpp  transient_allocator.cpp
libs/borg/: CMakeLists.txt
libs/borg/include/borg/: input.hpp  window.hpp
libs/borg/src/: input.cpp  window.cpp
libs/federation/: CMakeLists.txt
libs/federation/include/federation/: config_manager.hpp  core.hpp  log.hpp
libs/federation/include/federation/storage/: virtual_file_system.hpp
libs/federation/src/: config_manager.cpp  core.cpp  log.cpp
shaders/: triangle.vert
src/batleth/: CMakeLists.txt
src/batleth/include/batleth/: device.hpp  instance.hpp  pipeline.hpp  render_pass.hpp  shader.hpp  shader_compiler.hpp  surface.hpp  swapchain.hpp
src/batleth/src/: command_buffer.cpp  device.cpp  framebuffer.cpp  instance.cpp  pipeline.cpp  render_pass.cpp  shader_compiler.cpp  surface.cpp  swapchain.cpp
src/borg/: CMakeLists.txt
src/borg/include/borg/: input.hpp  window.hpp
src/borg/src/: window.cpp
src/editor/: CMakeLists.txt  main.cpp
src/federation/include/federation/: core.hpp  log.hpp
src/federation/src/: log.cpp
src/game/: CMakeLists.txt  main.cpp
src/klingon/: CMakeLists.txt
src/klingon/include/klingon/: engine.hpp  imgui_context.hpp  renderer.hpp
src/klingon/src/: engine.cpp  imgui_context.cpp  renderer.cpp
